Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/processing/TestMultipleErrors.out
TestMultipleErrors.java:18:8: compiler.err.proc.messager: error1
TestMultipleErrors.java:18:8: compiler.err.proc.messager: error2
TestMultipleErrors.java:18:8: compiler.err.proc.messager: error3
TestMultipleErrors.java:18:8: compiler.err.proc.messager: error4
4 errors
